--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -1,6 +1,8 @@
 ﻿@page "/Ventas"
 @page "/Ventas/{Id:int}"
 
+@using ProyectoFinal_Aplicada2.Models;
+
 <style>
     * {
         margin: 0;
@@ -28,18 +30,17 @@
 <section class="form-register">
     <h3>Ventas</h3>
     <h3>@mensaje</h3>
-    <EditForm Model="@compras" OnValidSubmit="Guardar">
+    <EditForm Model="@ventas" OnValidSubmit="Guardar">
         <DataAnnotationsValidator />
         <label for="Id">CompraId</label>
         <div class="row">
             <div class="col-md-8">
                 <div class="form-group">
 
-                    <InputNumber @bind-Value="compras.CompraId" class="form-control"></InputNumber>
-                    <ValidationMessage For="(()=>compras.CompraId)"></ValidationMessage>
+                    <InputNumber @bind-Value="ventas.VentaId" class="form-control"></InputNumber>
+                    <ValidationMessage For="(()=>ventas.VentaId)"></ValidationMessage>
                 </div>
             </div>
-
 
             <div class="col-md-4">
 
@@ -49,48 +50,38 @@
         </div>
 
         <div class="form-group">
-            <label for="FechaCompra">Fecha de compra</label>
-            <InputDate @bind-Value="compras.FechaCompra" class="form-control"></InputDate>
-            <ValidationMessage For="(()=>compras.FechaCompra)"></ValidationMessage>
+            <label for="FechaVenta">Fecha de Venta</label>
+            <InputDate @bind-Value="ventas.FechaVenta" class="form-control"></InputDate>
+            <ValidationMessage For="(()=>ventas.FechaVenta)"></ValidationMessage>
         </div>
 
+        <button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>
 
         <div class="row">
             <div class="col">
-                <label for="ProductoId">ProductoId</label>
-                <InputNumber @bind-Value="ProductoId" class="form-control"></InputNumber>
+                <label for="materia">Materia</label>
+                <InputSelect @bind-Value="@seleccionado" @onchange="CargarProducto" @onclick="CargarProducto" class="form-control">
+                    @foreach (var item in MiLista)
+                    {
+                        <option value="@item.ProductoId">@item.Nombre</option>
+                    }
+                </InputSelect>
+                <button type="button" class="btn btn-outline-info" @onclick="AgregarProducto">Agregar</button>
             </div>
             <div class="col">
-                <label for="Cantidad">Cantidad</label>
-                <InputNumber @bind-Value="Cantidad" class="form-control" @onchange="CalcularTotalDeCompra" @onfocusin="CalcularTotalDeCompra" @onfocusout="CalcularTotalDeCompra"></InputNumber>
+                <label for="creditos">Descripcion</label>
+                <InputNumber id="creditos" class="form-control" @bind-Value="productos.Nombre" ReadOnly="true"></InputNumber>
             </div>
-
-            <div class="col">
-                <label for="PrecioCompra">Precio de compra</label>
-                <InputNumber @bind-Value="PrecioCompra" class="form-control" @onchange="CalcularTotalDeCompra" @onfocusin="CalcularTotalDeCompra" @onfocusout="CalcularTotalDeCompra"></InputNumber>
-            </div>
-
-            <div class="col">
-                <label for="Nombre">Nombre</label>
-                <InputText @bind-Value="nombre" class="form-control"></InputText>
-            </div>
-
-
         </div>
-        <br />
-        <button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>
-
-        <br />
-
         <table class="table">
             <thead class="thead-dark">
                 <tr>
                     <th>Id</th>
-                    <th>CompraId</th>
+                    <th>VentaId</th>
                     <th>ProductoId</th>
                     <th>Nombre</th>
                     <th>Cantidad</th>
-                    <th>PrecioCompra</th>
+                    <th>PrecioVentas</th>
                     <th>SubTotal</th>
                     <th></th>
                 </tr>
@@ -115,21 +106,8 @@
         </table>
 
         <div class="form-group">
-            <label for="ProveedorId">ProveedorId</label>
-            <InputNumber @bind-Value="compras.ProveedorId" class="form-control"></InputNumber>
-            <ValidationMessage For="(()=>compras.ProveedorId)"></ValidationMessage>
-        </div>
-
-
-        <div class="form-group">
-            <label for="ITEBIS">ITEBIS</label>
-            <InputNumber @bind-Value="compras.Itbis" class="form-control"></InputNumber>
-            <ValidationMessage For="(()=>compras.Itbis)"></ValidationMessage>
-        </div>
-
-        <div class="form-group">
             <label for="Balance">Balance</label>
-            <InputNumber @bind-Value="compras.Balance" disabled class="form-control"></InputNumber>
+            <InputNumber @bind-Value="ventas.Balance" disabled class="form-control"></InputNumber>
         </div>
 
         <button type="button" class="btn btn-secondary" @onclick="Nuevo">Nuevo</button>
@@ -139,21 +117,38 @@
 </section>
 
 @code {
-    private string mensaje;
-    Ventas ventas = new Ventas();
-    private int ProductoId;
-    private decimal PrecioVenta;
-    private int Cantidad;
-    private string nombre;
+
+
 
     [Parameter]
     public int Id { get; set; }
+    private string mensaje { get; set; }
+    private string seleccionado { get; set; }
+    
+    Ventas ventas = new Ventas();
+    private Productos productos;
+    List<Productos> MiLista = new List<Productos>();
+
 
     protected override void OnInitialized()
     {
         if(Id>0)
         {
             ventas = ventascontroller.Buscar(Id);
+        }
+        MiLista = productoscontrollers.GetList(A => true);
+    }
+
+    private void CargarProducto()
+    {
+        try
+        {
+             productos = productoscontrollers.Buscar(Int32.Parse(seleccionado));
+        }
+        catch (Exception)
+        {
+
+            //wefrbrvr
         }
     }
 
@@ -196,7 +191,7 @@
 
     private void Buscar()
     {
-        Compras busca = comprascontroller.Buscar(ventas.VentaId);
+        Ventas busca = ventascontroller.Buscar(ventas.VentaId);
         if (busca != null)
         {
             this.ventas = busca;
@@ -217,23 +212,23 @@
             Id = 0,
             VentaId = ventas.VentaId,
             ProductoId = ProductoId,
-            Nombre = nombre,
-            Cantidad = Cantidad,
-            PrecioVenta = PrecioVentas,
-            SubTotal = Cantidad * PrecioVentas
+            Nombre = 
+            Cantidad = 
+            PrecioVenta = 
+            SubTotal =  
         });
     }
 
     private void CalcularTotalDeVenta()
     {
-        ventas.Balance = PrecioVentas * Cantidad;
+        ventas.Balance =  * ;
     }
 
-    private void EliminarDetalle(ComprasDetalle detalle)
+    private void EliminarDetalle(VentasDetalle detalle)
     {
         try
         {
-            compras.ComprasDetalles.Remove(detalle);
+            ventas.VentasDetalles.Remove(detalle);
         }
         catch (Exception)
         {
