Arreglando el botón Eliminar del detalle de Compra y Venta

--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -55,7 +55,7 @@ else
                     <td>@item.ProveedorId</td>
                     <td>@item.Itbis</td>
                     <td>@item.Balance</td>
-                    <td><a class="btn btn-primary" href="compra/@item.CompraId">Ver</a></td>
+                    <td><a class="btn btn-outline-info" href="Compras/@item.CompraId">Ver</a></td>
                 </tr>
             }
         </tbody>
