--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -67,6 +67,7 @@
                         <option value="@item.ProductoId">@item.Nombre</option>
                     }
                 </InputSelect>
+                <button class="btn btn-outline-primary" @onclick="AgregarProducto" type="button">Agregar</button>
             </div>
 
             <div class="col">
@@ -82,7 +83,8 @@
         </div>
    
 
-        <button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>
+
+        <br />
 
         <table class="table">
             <thead class="thead-dark">
@@ -108,7 +110,7 @@
                         <td>@item.Cantidad</td>
                         <td>@item.PrecioCompra</td>
                         <td>@item.SubTotal</td>
-                        <td><button class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))">Remover</button></td>
+                        <td><button class="btn btn-outline-danger" @onclick="(() => EliminarDetalle(item))" type="button">Remover</button></td>
                     </tr>
                 }
 
@@ -187,6 +189,7 @@
             {
                 mensaje = "Guardado correctamente";
                 this.compras = new Compras();
+                compras.ComprasDetalles = new List<ComprasDetalle>();
             }
             else
             {
