--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -30,7 +30,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Compra">
+            <NavLink class="nav-link" href="Compras">
                 <span class="oi oi-plus" aria-hidden="true"></span> Compra
             </NavLink>
         </li>
