--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -32,12 +32,11 @@
     <h3>@mensaje</h3>
     <EditForm Model="@ventas" OnValidSubmit="Guardar">
         <DataAnnotationsValidator />
-        <label for="Id">CompraId</label>
         <div class="row">
             <div class="col-md-8">
                 <div class="form-group">
-
-                    <InputNumber @bind-Value="ventas.VentaId" class="form-control"></InputNumber>
+                    <label for="Id">CompraId</label>
+                    <InputNumber id="id" @bind-Value="ventas.VentaId" class="form-control"></InputNumber>
                     <ValidationMessage For="(()=>ventas.VentaId)"></ValidationMessage>
                 </div>
             </div>
@@ -50,17 +49,17 @@
         </div>
 
         <div class="form-group">
-            <label for="FechaVenta">Fecha de Venta</label>
-            <InputDate @bind-Value="ventas.FechaVenta" class="form-control"></InputDate>
+            <label for="Fechaventa">Fecha de Venta</label>
+            <InputDate id="Fechaventa" @bind-Value="ventas.FechaVenta" class="form-control"></InputDate>
             <ValidationMessage For="(()=>ventas.FechaVenta)"></ValidationMessage>
         </div>
 
-        <button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>
+        @*<button class="btn btn-outline-primary" @onclick="AgregarProducto">Agregar</button>*@
 
         <div class="row">
             <div class="col">
-                <label for="materia">Materia</label>
-                <InputSelect @bind-Value="@seleccionado" @onchange="CargarProducto" @onclick="CargarProducto" class="form-control">
+                <label for="producto_select">Producto</label>
+                <InputSelect id="producto_select" @bind-Value="@seleccionado" @onchange="CargarProducto" @onclick="CargarProducto" class="form-control">
                     @foreach (var item in MiLista)
                     {
                         <option value="@item.ProductoId">@item.Nombre</option>
@@ -136,12 +135,10 @@
     public int Id { get; set; }
     private string mensaje { get; set; }
     private string seleccionado { get; set; }
-
-
-    private int cantidad;
+    private int cantidad { get; set; }
+    private Productos productos { get; set; }
 
     Ventas ventas = new Ventas();
-    private Productos productos;
     List<Productos> MiLista = new List<Productos>();
 
 
@@ -270,4 +267,4 @@
             //
         }
     }
-    }
+}
