--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -15,32 +15,32 @@
 
         @*Registros*@
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Usuarios">
+            <NavLink class="nav-link" href="Usuarios/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Usuarios
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Productos">
+            <NavLink class="nav-link" href="Productos/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Productos
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Proveedores">
+            <NavLink class="nav-link" href="Proveedores/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Proveedores
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Compras">
+            <NavLink class="nav-link" href="Compras/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Compra
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Ventas">
+            <NavLink class="nav-link" href="Ventas/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Ventas
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="Pagos">
+            <NavLink class="nav-link" href="Pagos/0">
                 <span class="oi oi-plus" aria-hidden="true"></span> Pagos
             </NavLink>
         </li>
