intentando que funcione

--- a/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/UsuariosComponent.razor
@@ -66,7 +66,7 @@
 
         <div class="form-group">
             <label for="NivelUsuario_text" class="form-control">Nivel de Usuario</label>
-            <InputSelect @bind-Value="@usuarios.NivelUsuario">
+            <InputSelect class="form-control" @bind-Value="@usuarios.NivelUsuario">
                 <option value="Administrador">Administrador</option>
                 <option value="Contador">Contador</option>
                 <option value="Cajero">Cajero</option>
