Agregando un Text muted

--- a/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ComprasComponent.razor
@@ -29,7 +29,7 @@
 
 <section class="form-register">
     <h3>Compras</h3>
-    <h3>@mensaje</h3>
+    <h3 class="form-text text-muted">@mensaje</h3>
     <EditForm Model="@compras" OnValidSubmit="Guardar">
         <DataAnnotationsValidator/>
         <label for="Id">CompraId</label>
