--- a/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProductosComponent.razor
@@ -29,7 +29,7 @@
 <section class="form-register">
     
     <h3>Productos</h3>
-    <h3>@mensaje</h3>
+    <h3 class="form-text text-muted">@mensaje</h3>
     <EditForm Model="productos" OnValidSubmit="Guardar">
         <DataAnnotationsValidator/>
         <label for="Id">ProductoId</label>
