--- a/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ProveedoresComponent.razor
@@ -28,7 +28,7 @@
 <section class="form-register">
 
     <h3>Proveedores</h3>
-    <h3>@mensaje</h3>
+    <h3 class="form-text text-muted">@mensaje</h3>
     <EditForm Model="proveedores" OnValidSubmit="Guardar">
         <DataAnnotationsValidator></DataAnnotationsValidator>
         <label for="Id">ProveedorId</label>
