--- a/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
+++ b/ProyectoFinal-Aplicada2/Pages/VentasComponent.razor
@@ -116,6 +116,9 @@
         </table>
 
         <div class="form-group">
+
+            <label for="Balance">Balance</label>
+            <InputNumber @bind-Value="ventas.Balance" class="form-control"></InputNumber>
             <label for="balance">Balance</label>
             <InputNumber id="balance" @bind-Value="ventas.Balance" disabled class="form-control"></InputNumber>
         </div>
@@ -135,6 +138,7 @@
     private string mensaje { get; set; }
     private string seleccionado { get; set; }
     private int cantidad { get; set; }
+
 
     private string nombre = string.Empty;
     private decimal precioVenta = 0;
