--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -3,32 +3,27 @@
 <h3>Consulta de Compras</h3>
 
 <div class="form-row">
-    <div class="col">
-        
-        <select @bind="Criterio">
-            <option value="">Elija un campo</option>
-            <option value="Todos">Todos</option>
-            <option value="Id">Id</option>
-            <option value="ProveedorId">ProveedorId</option>
-            <option value="Itebis">Itebis</option>
-            <option value="Balance">Balance</option>
+    <div class="col">       
+        <select class="form-control" @bind="filtro">
+            <option value="0">Todos</option>
+            <option value="1">Id</option>
+            <option value="2">ProveedorId</option>
+            <option value="3">Itbis</option>
+            <option value="4">Balance</option>
         </select>
-
-
     </div>
 
     <div class="col">
-        <input type="text" @bind="filtro" />
+        <input type="text" placeholder="Criterio" @bind="Criterio" />
     </div>
 
     <div class="col">
         <button type="button" class="btn btn-primary" @onclick="Filtrar">Filtrar</button>
     </div>
-
 </div>
 
 
-@if (Compras == null)
+@if (ListaCompras == null)
 {
     <p>No hay datos que mostrar</p>
     return;
@@ -47,7 +42,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Compras)
+            @foreach (var item in ListaCompras)
             {
                 <tr>
                     <td>@item.CompraId</td>
@@ -61,12 +56,13 @@ else
         </tbody>
     </table>
 }
+
 @code {
-    List<Compras> Compras = new List<Compras>();
+        List<Compras> ListaCompras = new List<Compras>();
 
     protected override void OnInitialized()
     {
-        Compras = comprascontroller.GetList(p => true);
+        ListaCompras = comprascontroller.GetList(p => true);
     }
 
     private string filtro;
@@ -76,37 +72,65 @@ else
 
     private void Filtrar()
     {
+        int filtroIndex = Int32.Parse(filtro);
+
         if (Criterio.Trim().Length > 0)
         {
-            try
+            switch (filtroIndex)
             {
-                switch (Criterio)
-                {
-                    case "Todos":
+                //Todos
+                case 0:
+                    listado = comprascontroller.GetList(p => true);
+                    ListaCompras = listado;
+                    break;
+                //Int
+                case 1:
+                    int id = 0;
+                    if (int.TryParse(Criterio, out id))
+                    {
+                        id = Convert.ToInt32(Criterio);
+                        listado = comprascontroller.GetList(p => p.CompraId == id);
+                        ListaCompras = listado;
+                    }
+                    break;
+                //ProveedorId
+                case 2:
+                    int id = 0;
+                    if (int.TryParse(Criterio, out id))
+                    {
+                        id = Convert.ToInt32(Criterio);
                         listado = comprascontroller.GetList(p => true);
-                        break;
-                    case "Id":
-                        listado = comprascontroller.GetList(p => p.CompraId.ToString() == filtro);
-                        break;
-                    case "ProveedorId":
-                        listado = comprascontroller.GetList(p => p.ProveedorId.ToString() == filtro);
-                        break;
-                }
-
-            } catch
-            {
+                        ListaCompras = listado;
+                    }
+                    break;
+                //Itbis
+                case 3:
+                    decimal Itbis = 0;
+                    if (decimal.TryParse(Criterio, out Itbis))
+                    {
+                        Itbis = Convert.ToDecimal(Criterio);
+                        listado = comprascontroller.GetList(p => p.Itbis == Itbis);
+                        ListaCompras = listado;
+                    }
+                    break;
+                //Balance
+                case 4:
+                    decimal balance = 0;
+                    if (decimal.TryParse(Criterio, out balance))
+                    {
+                        balance = Convert.ToDecimal(Criterio);
+                        listado = comprascontroller.GetList(p => p.Balance == balance);
+                        ListaCompras = listado;
+                    }
+                    break;
 
             }
         }
-
-
-    }
-
-
-
-
-
-
+        else
+        {
+            listado = comprascontroller.GetList(p => true);
+            ListaCompras = listado;
+        }
     }
 }
 
